src/test/run-pass/loop-break-cont-1.rs
fn main() {
  let i = 0u;
  loop {
    break;
  }
  assert true;
}