src/test/compile-fail/break-outside-loop.rs
// error-pattern:break outside a loop
fn main() {
    let pth = break;

    let rs: {t: str} = {t: pth};

}
